<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainScreenActivity">

    <Button
        android:id="@+id/backact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/kbhui"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tambah_data_dosen" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_tambahdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_dosen"/>

        <Button
            android:id="@+id/button_lihatdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lihat_dosen"/>

        <Button
            android:id="@+id/button_hapusdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hapus_data_dosen"/>
    </LinearLayout>

</RelativeLayout>