<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AksiCrud">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/menuju_sqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mcsd" />
    <Button
        android:id="@+id/menuju_webserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mcwrs" />
    <Button
        android:id="@+id/menuju_downup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mdwdf" />


</LinearLayout>